# midi-gen-ai

./: .gitignore  LICENSE  README.md  convert.py  generate.py  midi_utils.py  pyproject.toml  requirements.txt  setup.sh
scripts/: ableton_data.py
v1/: dataset.py  train.py
v2/: __init__.py  eval_v1_generate.py  eval_v2.py  generate_v2.py  grade_app.py  hub.py  lambda_provision.py  modal_train.py  model_v2.py  run_local_pilot.sh  setup_lambda.sh  tokenizer_v2.py  train_v2.py
v2/data/: augment.py  build_dataset.py  clean.py  download.py  sample_eval_set.py
v2/templates/: grade.html
