[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midigenai"
version = "0.1.0"
description = "Real-time AI MIDI continuation. Custom 25M transformer + event-based tokenization."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nicholas Bien" }]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "torch",
    "miditok",
    "symusic",
    "einops",
    "tqdm",
    "huggingface_hub",
]

[project.optional-dependencies]
v1 = [
    "transformers",
    "tokenizers",
    "note-seq",
    "pretty_midi",
    "mido",
    "datasets",
    "accelerate",
    "trl",
]
eval = ["muspy"]
grading = ["flask"]

[project.urls]
Homepage = "https://github.com/nicholasbien/midi-gen-ai"
Model = "https://huggingface.co/nicholasbien/midigenai"

[tool.setuptools.packages.find]
include = ["v2*"]
exclude = ["v2.data*", "v2.templates*", "v2.static*"]
